--- a/style.css
+++ b/style.css
@@ -1,21 +1,101 @@
-/* You're welcome to change any of this! */
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:wght@300;400;500&display=swap');
 * {
     box-sizing: border-box;
 }
 
 body {
     margin: 0px;
-    font-family: Arial, sans-serif;
-}
+    font-family: IBM Plex Serif;
+    font-weight: 300;
+    line-height: 1.2em;
+    background-image: linear-gradient(#84DCF0, #EDD9DA)}
 header, section {
     padding: 20px;
 }
 p, li {
-    line-height: 1.5em;
+    line-height: 1.3em;
 }
+h1 {
+    font-family: IBM Plex Serif;
+    font-weight: 500;
+}
+h2 {
+    font-family: IBM Plex Serif;
+    font-weight: 400;
+}
+h3 {
+    font-family: IBM Plex Serif;
+    font-weight: 350;
+}
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+}
+.card {
+    width: 15vw;
+    padding: 0px;
+    background-color: #F54845;
+    text-align: center;
+    border-radius: 10px;
+}
+.card > div {
+    border: solid 1px #CCC;
+    padding: 10px;
+    border-radius: 10px;
+}
+.card:hover > div {
+    border: solid 3px black;
+    padding: 8px;
+    background-color: #F573EE;
+}
+
+/* Inspiration Section */
 
 #inspiration {
     background-color: #F0F0F0;
-    padding-top: 40px;
-    padding-bottom: 40px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.inspiration-cards {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.inspiration-card {
+  width: 25%;
+  padding: 10px;
+}
+
+.inspiration-card > div {
+  border: solid 1px #CCC;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.image-div {
+  background-size: cover;
+  width: 100%;
+  height: 256px;
+}
+
+.caption {
+  margin-top: 15px;
+  margin-bottom: 30px;
+  color: #999
+  display: flex;
+  justify-content: center;
+}
+
+.inspiration-card:hover > div {
+  border: solid 1px black;
+}
+
+.inspiration-card:hover .image-div {
+  opacity: 0.8;
+}
+
+.inspiration-card .caption {
+  color: black;
+  font-weight: bold;
 }
