--- a/project/resume/style.css
+++ b/project/resume/style.css
@@ -1,13 +1,6 @@
-/* Borders are currently included for debugging purposes */
-
-/* Colors: #FCF0CC (text color), #191D32, #282F44, #453A49, #6D3B47, #BA2C73
-   URL:    https://coolors.co/191d32-282f44-453a49-6d3b47-ba2c73 */
-
-
 @import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,300;0,400;0,600;0,700;0,900;1,300;1,400;1,600;1,700&display=swap');
 
 * {
-  /* border: solid 1px black; */
   margin: 0;
 }
 
@@ -26,9 +19,9 @@ html, body {
   justify-content: center;
   position: fixed;
   width: 100vw;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  border-bottom: double 10px #FCF0CC;
+  padding-top: 5px;
+  padding-bottom: 20px;
+  border-bottom: double 7px #FCF0CC;
   z-index: 10;
   background-image: linear-gradient(to bottom right, #6D3B47, #282F44);
   color: #FCF0CC;
@@ -54,7 +47,7 @@ html, body {
 /* Main */
 
 main {
-  padding-top: 184px;
+  padding-top: 115px;
   border: none;
   z-index: 1;
   background-color: #282F44;
@@ -62,8 +55,8 @@ main {
 
 section {
   border: none;
-  padding-top: 50px;
-  padding-bottom: 40px;
+  padding-top: 45px;
+  padding-bottom: 32px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -79,6 +72,8 @@ iframe {
 
 nav {
   background-color: #BA2C73;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
   padding: 30px 0;
   display: flex;
   justify-content: center;
@@ -93,7 +88,6 @@ nav a {
   color: #FCF0CC;
   background-color: #191D32;
   border-radius: 7px;
-  /* font-style: italic; */
   font-size: 1.2em;
 }
 
